k8s/base/daemonset-promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  labels:
    app.kubernetes.io/component: promtail
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: promtail
  template:
    metadata:
      labels:
        app.kubernetes.io/component: promtail
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: grafana/promtail:3.1.1
          imagePullPolicy: IfNotPresent
          args:
            - -config.file=/etc/promtail/config.yml
          ports:
            - containerPort: 9080
              name: http
          volumeMounts:
            - name: promtail-config
              mountPath: /etc/promtail/config.yml
              subPath: config.yml
            - name: varlog
              mountPath: /var/log
            - name: run
              mountPath: /run/promtail
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
        - name: varlog
          hostPath:
            path: /var/log
        - name: run
          emptyDir: {}
