k8s/base/deployment-db-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-api
  labels:
    app.kubernetes.io/component: db-api
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/component: db-api
  template:
    metadata:
      labels:
        app.kubernetes.io/component: db-api
    spec:
      containers:
        - name: db-api
          image: football-platform-app-db-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3010
              name: http
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 750m
              memory: 384Mi
