k8s/base/deployment-loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  labels:
    app.kubernetes.io/component: loki
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: loki
  template:
    metadata:
      labels:
        app.kubernetes.io/component: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.1.1
          imagePullPolicy: IfNotPresent
          args:
            - -config.file=/etc/loki/config.yml
          ports:
            - containerPort: 3100
              name: http
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki/config.yml
              subPath: config.yml
            - name: loki-data
              mountPath: /loki
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 750m
              memory: 1Gi
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki-data
