k8s/base/service-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app.kubernetes.io/component: alertmanager
spec:
  selector:
    app.kubernetes.io/component: alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: http
