k8s/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 3002
      targetPort: http
