k8s/base/service-blackbox-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  labels:
    app.kubernetes.io/component: blackbox-exporter
spec:
  selector:
    app.kubernetes.io/component: blackbox-exporter
  ports:
    - name: http
      port: 9115
      targetPort: http
