k8s/base/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/component: grafana
spec:
  selector:
    app.kubernetes.io/component: grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
