k8s/base/service-kube-state-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  labels:
    app.kubernetes.io/component: kube-state-metrics
spec:
  selector:
    app.kubernetes.io/component: kube-state-metrics
  ports:
    - port: 8080
      targetPort: http
      name: http
