k8s/base/service-loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app.kubernetes.io/component: loki
spec:
  selector:
    app.kubernetes.io/component: loki
  ports:
    - port: 3100
      targetPort: http
      name: http
