k8s/base/service-promtail.yaml
apiVersion: v1
kind: Service
metadata:
  name: promtail
  labels:
    app.kubernetes.io/component: promtail
spec:
  selector:
    app.kubernetes.io/component: promtail
  ports:
    - port: 9080
      targetPort: http
      name: http
